# databridge-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.postgres  LICENSE  README.md  SECURITY.md  agent.py  ambiguity.py  app.py  config.py  csv_export.py  database.py  docker-compose.yml  feedback.py  main.py  observability.py  privacy_policy.json  privacy_policy.py  pyproject.toml  query_log.py  query_plan.py  rate_limit.py  requirements-dev.txt  requirements-frontend.txt  requirements.txt  result_formatting.py  schema_service.py  semantic_layer.json  semantic_layer.py  sql_safety.py  sql_tools.py
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
db/: init.sh
evaluation/: __init__.py  cases.json  comparison.py  models.py  run.py
scripts/: sync_db_roles.sh
tests/: test_agent.py  test_ambiguity.py  test_config.py  test_csv_export.py  test_database.py  test_evaluation.py  test_feedback.py  test_main.py  test_observability.py  test_privacy_policy.py  test_query_plan.py  test_result_formatting.py  test_semantic_layer.py  test_sql_safety.py  test_sql_tools.py
